--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
     "postcss": "^8",
